WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143356
AX: Toggling check box state not speaking using plain space, not VO space.
https://bugs.webkit.org/show_bug.cgi?id=143356
Summary
AX: Toggling check box state not speaking using plain space, not VO space.
chris fleizach
Reported
2015-04-02 17:59:39 PDT
If I navigate to a check box, press space, I don’t hear the state change spoken by VO. 1) Open this URL: 2) Tab your way to the check boxes. 3) Toggle their states with space. <
rdar://problem/19801265
>
Attachments
patch
(5.19 KB, patch)
2015-04-02 18:02 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2015-04-02 18:02:20 PDT
Created
attachment 250026
[details]
patch
WebKit Commit Bot
Comment 2
2015-04-03 14:22:28 PDT
Comment on
attachment 250026
[details]
patch Clearing flags on attachment: 250026 Committed
r182333
: <
http://trac.webkit.org/changeset/182333
>
WebKit Commit Bot
Comment 3
2015-04-03 14:22:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug