AX: Toggling check box state not speaking using plain space, not VO space. https://bugs.webkit.org/show_bug.cgi?id=143356

Reviewed by Darin Adler.

Source/WebCore:

The checkbox state change needs to result in a value change being generated, otherwise accessibility won't know the value has changed through keyboard usage.

Test: platform/mac/accessibility/checkbox-posts-value-change-notification-after-activation-with-space.html

* accessibility/mac/AXObjectCacheMac.mm:
(WebCore::AXObjectCache::postPlatformNotification):

LayoutTests:

* platform/mac/accessibility/checkbox-posts-value-change-notification-after-activation-with-space-expected.txt: Added.
* platform/mac/accessibility/checkbox-posts-value-change-notification-after-activation-with-space.html: Added.


Canonical link: https://commits.webkit.org/161425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182333 268f45cc-cd09-0410-ab3c-d52691b4dbfc